--- a/public/index.html
+++ b/public/index.html
@@ -4,10 +4,10 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="theme-color" content="#fab81e">
+  <meta name="theme-color" content="#8ed9b2">
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
   <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
-  <title>Yandex Messenger</title>
+  <title>Messenger</title>
 </head>
 
 <body>
